<resources>

    <string name="app_name">Dragon Radar</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">Dragon Radar</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="launch_map">Launch Map</string>
    <string name="signin_other_error">There was a issue with sign in, please try again later</string>
    <string name="app_id">975270108633</string>
    <string name="EASY_LEADERBOARD_ID">CgkI2buDlbEcEAIQAA</string>
    <string name="MEDIUM_LEADERBOARD_ID">CgkI2buDlbEcEAIQBw</string>
    <string name="HARD_LEADERBOARD_ID">CgkI2buDlbEcEAIQCA</string>
    <string name="title_activity_options_screen">OptionsScreen</string>
    <string name="title_activity_difficulty_screen">DifficultyScreen</string>
    <string name="startbutton">startbutton</string>
    <string name="optionbutton">optionsbutton</string>
    <string name="exitbutton">exitbutton</string>
    <string name="logo">logo</string>
    <string name="difficultybutton">difficultybutton</string>
    <string name="timebutton">timebutton</string>
    <string name="backbutton">backbutton</string>
    <string name="HardButton">hardbutton</string>
    <string name="hardbutton">hardbutton</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>
    <string name="demobutton">Demo Button</string>

    <string name="dragonball_hunter_achivement_id">CgkI2buDlbEcEAIQAg</string>
    <string name="dragonball_seeker_achivement_id">CgkI2buDlbEcEAIQAw </string>
    <string name="dragonball_finder_achivement_id">CgkI2buDlbEcEAIQBA</string>
    <string name="dragonball_pursuer_achivement_id">CgkI2buDlbEcEAIQBQ</string>
    <string name="dragonball_knight_achivement_id">CgkI2buDlbEcEAIQBg</string>
</resources>
