<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    android:clickable="false"
    android:background="@drawable/dragon_radar_v">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/startbutton"
        android:background="@drawable/start_button_4"
        android:contentDescription="@string/startbutton"
        android:clickable="true"
        android:onClick="startGame"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo"
        android:background="@drawable/dragon_ball_z_logo"
        android:contentDescription="@string/logo"
        android:layout_above="@+id/startbutton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/difficultybutton"
        android:background="@drawable/difficulty_button_3"
        android:contentDescription="@string/difficultybutton"
        android:clickable="true"
        android:onClick="launchDifficutlyScreen"
        android:layout_below="@+id/sign_in_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />


    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/exitbutton"
        android:background="@drawable/exit_button_3"
        android:contentDescription="@string/exitbutton"
        android:clickable="true"
        android:onClick="Exit"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/difficultybutton"
        android:layout_alignEnd="@+id/difficultybutton" />

    <!-- sign-in button -->
    <!--<com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/startbutton"
        android:layout_toStartOf="@+id/startbutton" />-->

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign_in_button"
        android:background="@drawable/sign_in_button_3"
        android:contentDescription="@string/sign_in"
        android:clickable="true"
        android:layout_below="@+id/startbutton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp" />

</RelativeLayout>
