<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/dragon_radar_v"
    tools:context=".OptionsScreen"
    android:orientation="vertical">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/difficultybutton"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/difficulty_button"
        android:layout_marginTop="105dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/difficultybutton"
        android:clickable="true"
        android:onClick="Getdifficulty"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timebutton"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/time_button"
        android:contentDescription="@string/timebutton"
        android:clickable="true"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backbutton"
        android:layout_below="@+id/timebutton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:background="@drawable/back_button"
        android:contentDescription="@string/backbutton"
        android:clickable="true"
        android:onClick="Getmain"/>

</RelativeLayout>
